[metadata]
name = cwfxns-chemicalwill
version = 0.0.1
author = Will Hedges
author_email = chemicalwill92@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://githcom.com/chemicalwill/cwfxns
project_urls = 
    Bug Tracker = https://github.com/chemicalwill/cwfxns/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src